--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/step-batch-7/geometry-apurvagurme/issues"
   },
-  "homepage": "https://github.com/step-batch-7/geometry-apurvagurme#readme"
+  "homepage": "https://github.com/step-batch-7/geometry-apurvagurme#readme",
+  "devDependencies": {
+    "mocha": "^6.2.2"
+  }
 }
